--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.5",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^3.0.0",
+    "@iconify/vue2": "^1.0.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
